Link fixes from Agora migration.

--- a/coursework/index.html
+++ b/coursework/index.html
@@ -3,7 +3,7 @@
     <head>
         <title>Michael King</title>
         <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-        <link rel="SHORTCUT ICON" href="/%7emtking2/images/rubik.png">
+        <link rel="SHORTCUT ICON" href="../images/rubik.png">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <!-- link rel='stylesheet' type='text/css' href='index.css'/-->
         
@@ -39,9 +39,9 @@
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
               <ul class="nav navbar-nav">
-                <li><a href="/%7emtking2/">Home<span class="sr-only">(current)</span></a></li>
-                <li><a href="/%7emtking2/cal/">Schedule<span class="sr-only">(current)</span></a></li>
-                <li><a href="/%7emtking2/cv/">CV<span class="sr-only">(current)</span></a></li>
+                <li><a href="../">Home<span class="sr-only">(current)</span></a></li>
+                <li><a href="../cal/">Schedule<span class="sr-only">(current)</span></a></li>
+                <li><a href="../cv/">CV<span class="sr-only">(current)</span></a></li>
                 <li><a href="#">Projects & Course Work<span class="sr-only">(current)</span></a></li>      
               </ul>
             </div><!-- /.navbar-collapse -->
@@ -79,7 +79,7 @@
                                     <li><a href="#" onclick="doPrimes()">Prime Numbers</a></li>
                                     <li><a href="cs/BinaryClockv3.jar">Binary Clock in Java</a></li>
                                     <li><a href="animation/css/">Earth & Moon animation in CSS</a></li>
-                                    <li><a href="animation/matlab/o.gif">Earth & Moon animation in MATLAB</a></li>
+                                    <li><a href="animation/matlab/o.gif" target="_blank">Earth & Moon animation in MATLAB</a></li>
                                 </ul>
                             </div>
                         </div>
@@ -91,7 +91,7 @@
                             <div class="panel-body">
                                 Deutsch 101 Videoprojekt:
                                 <ul>
-                                    <li><a href="de/">Michael und Zachary sind spät!</a></li>
+                                    <li><a href="https://youtu.be/GNvK6kPGkkE" target="_blank">Michael und Zachary sind spät!</a></li>
                                 </ul>
                             </div>
                         </div>
@@ -103,7 +103,7 @@
                             <div class="panel-body">
                                 <ul>
                                     <li><a href="wculwc/">WCU Live Webcam</a></li>
-                                    <li><a href="issHDVE/">ISS HDVE</a></li>
+                                    <li><a href="http://www.ustream.tv/channel/17074538" target="_blank">ISS HDVE</a></li>
                                 </ul>
                             </div>
                         </div>
