--- a/coursework/animation/css/index.html
+++ b/coursework/animation/css/index.html
@@ -3,7 +3,7 @@
     <head>
         <title>Michael King</title>
         <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-        <link rel="SHORTCUT ICON" href="/%7emtking2/images/rubik.png">
+        <link rel="SHORTCUT ICON" href="../../../images/rubik.png">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <!-- link rel='stylesheet' type='text/css' href='index.css'/-->
         
@@ -33,17 +33,18 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
               </button>
-              <a class="navbar-brand" href="http://www.wcu.edu"><img alt="Brand" src="/%7emtking2/images/wcu3.png" style="height:25px;"></a>
+              <a class="navbar-brand" href="http://www.wcu.edu"><img alt="Brand" src="../../../images/wcu3.png" style="height:25px;"></a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
               <ul class="nav navbar-nav">
-                <li><a href="/%7emtking2/">Home<span class="sr-only">(current)</span></a></li>
-                <li><a href="/%7emtking2/cal/">Schedule<span class="sr-only">(current)</span></a></li>
-                <li><a href="/%7emtking2/coursework/">Projects & Course Work<span class="sr-only">(current)</span></a></li>      
+                <li><a href="../../../">Home<span class="sr-only">(current)</span></a></li>
+                <li><a href="../../../cal/">Schedule<span class="sr-only">(current)</span></a></li>
+                <li><a href="../../../cv/">CV<span class="sr-only">(current)</span></a></li>
+                <li><a href="#">Projects & Course Work<span class="sr-only">(current)</span></a></li>      
+              </ul>
             </div><!-- /.navbar-collapse -->
-            
           </div><!-- /.container-fluid -->
         </nav>
 
@@ -77,7 +78,5 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
     <script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap-submenu.min.js" defer></script>
-    <script src="/%7emtking2/fib/fib.js"></script>
-    <script src="/%7emtking2/primes/primes.js"></script>
 </html>
 
