--- a/cv/index.html
+++ b/cv/index.html
@@ -3,7 +3,7 @@
     <head>
         <title>Michael King</title>
         <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-        <link rel="SHORTCUT ICON" href="/%7emtking2/images/rubik.png">
+        <link rel="SHORTCUT ICON" href="../images/rubik.png">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <!-- link rel='stylesheet' type='text/css' href='index.css'/-->
         
@@ -48,16 +48,16 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
               </button>
-              <a class="navbar-brand" href="http://www.wcu.edu"><img alt="Brand" src="/%7emtking2/images/wcu3.png" style="height:25px;"></a>
+              <a class="navbar-brand" href="http://www.wcu.edu"><img alt="Brand" src="../images/wcu3.png" style="height:25px;"></a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
               <ul class="nav navbar-nav">
-                <li><a href="/%7emtking2/">Home<span class="sr-only">(current)</span></a></li>
-                <li><a href="/%7emtking2/cal/">Schedule<span class="sr-only">(current)</span></a></li>
+                <li><a href="../">Home<span class="sr-only">(current)</span></a></li>
+                <li><a href="../cal/">Schedule<span class="sr-only">(current)</span></a></li>
                 <li><a href="#">CV<span class="sr-only">(current)</span></a></li>
-                <li><a href="/%7emtking2/coursework/">Projects & Course Work<span class="sr-only">(current)</span></a></li>
+                <li><a href="../coursework/">Projects & Course Work<span class="sr-only">(current)</span></a></li>
               </ul>
             </div><!-- /.navbar-collapse -->
           </div><!-- /.container-fluid -->
@@ -71,11 +71,11 @@
             <hr>
             <p>   
                 <a href="http://validator.w3.org/check/referer"
-                title="Validate HTML5"><img src="/%7emtking2/images/valid-html51.png"
+                title="Validate HTML5"><img src="../images/valid-html51.png"
                 alt="Valid XHTML 1.0" height="20" width="70"/></a>&nbsp;&nbsp; 
                 
                 <a href="http://getbootstrap.com/" title="Bootstrap">
-                <img src="/%7emtking2/images/bootstrap.png"
+                <img src="../images/bootstrap.png"
                 alt="Bootstrap" height="20"/></a>&nbsp;&nbsp;
             </p>
             <script> document.write("Last modified on: " + document.lastModified +"");</script>
