--- a/coursework/animation/css/index.html
+++ b/coursework/animation/css/index.html
@@ -42,7 +42,7 @@
                 <li><a href="../../../">Home<span class="sr-only">(current)</span></a></li>
                 <li><a href="../../../cal/">Schedule<span class="sr-only">(current)</span></a></li>
                 <li><a href="../../../cv/">CV<span class="sr-only">(current)</span></a></li>
-                <li><a href="#">Projects & Course Work<span class="sr-only">(current)</span></a></li>      
+                <li><a href="../../../coursework/">Projects & Course Work<span class="sr-only">(current)</span></a></li>      
               </ul>
             </div><!-- /.navbar-collapse -->
           </div><!-- /.container-fluid -->
