Added CS capstone poster to coursework page.

--- a/coursework/index.html
+++ b/coursework/index.html
@@ -63,7 +63,7 @@
                             </div>
                             <div class="panel-body">
                                 <ul>
-                                    <li><a href="ecet/ecet_poster.pdf">Engineering Capstone Project</a></li>
+                                    <li><a href="ecet/ecet_poster.pdf" target="_blank">Engineering Capstone Project</a></li>
                                     <li><a href="ecet/michael.c">PIC24 Microcontroller C code for SumoBot</a></li>
                                 </ul>
                             </div>
@@ -75,6 +75,7 @@
                             </div>
                             <div class="panel-body">
                                 <ul>
+                                	<li><a href="cs/capstone/MIPS_sound_sequencer.pdf" target="_blank">Computer Science Capstone Project</li>
                                     <li><a href="#" onclick="doFib()">Fibonacci</a></li>
                                     <li><a href="#" onclick="doPrimes()">Prime Numbers</a></li>
                                     <li><a href="cs/BinaryClockv3.jar">Binary Clock in Java</a></li>
