--- a/cal/index.html
+++ b/cal/index.html
@@ -61,7 +61,7 @@
 
 
         <div class="frame">
-            <iframe src="https://calendar.google.com/calendar/embed?title=WCU%20Schedule&amp;mode=WEEK&amp;height=600&amp;wkst=1&amp;bgcolor=%23FFFFFF&amp;src=en.usa%23holiday%40group.v.calendar.google.com&amp;color=%230F4B38&amp;src=3vqh2bojcloa4l5osvtjka6pe0%40group.calendar.google.com&amp;color=%23182C57&amp;src=3d2i7n7nucedsb1iqiopcdh10c%40group.calendar.google.com&amp;color=%23875509&amp;src=ht3jlfaac5lfd6263ulfh4tql8%40group.calendar.google.com&amp;color=%23333333&amp;src=2mq865dto4gl3etmb7k81m108k%40group.calendar.google.com&amp;color=%2323164E&amp;src=p%23weeknum%40group.v.calendar.google.com&amp;color=%23B1440E&amp;ctz=America%2FNew_York" style="border-width:0; width:95%; height:800px"></iframe>
+            <iframe src="https://calendar.google.com/calendar/embed?title=WCU%20Schedule&amp;mode=WEEK&amp;height=600&amp;wkst=1&amp;bgcolor=%23FFFFFF&amp;src=en.usa%23holiday%40group.v.calendar.google.com&amp;color=%230F4B38&amp;src=3vqh2bojcloa4l5osvtjka6pe0%40group.calendar.google.com&amp;color=%231B887A&amp;src=ht3jlfaac5lfd6263ulfh4tql8%40group.calendar.google.com&amp;color=%23333333&amp;src=2mq865dto4gl3etmb7k81m108k%40group.calendar.google.com&amp;color=%2323164E&amp;ctz=America%2FNew_York" style="border-width:0" width="95%" height="800" frameborder="0" scrolling="no"></iframe>
         </div>
             
 
