Added link to GitHub profile. Changed navbar theme back to default. Changed WCU logo to orgional one.

--- a/index.html
+++ b/index.html
@@ -11,16 +11,28 @@
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
         <!-- Optional theme -->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css">
+        <!-- Latest compiled and minified JavaScript -->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-submenu.min.css">
+
+        <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.6.2/css/font-awesome.min.css" rel="stylesheet">
+
+
+
         <style>
             abbr[title] {
                 border-bottom: none !important;
                 cursor: inherit !important;
                 text-decoration: none !important;
             }
+            .navbar-brand,
+            .navbar-nav li a {
+                line-height: 50px;
+                height: 55px;
+                padding-top: 5px;
+                padding-left: 5px;
+            }
         </style>
     </head>
-
 
     <body>
         <!--
@@ -29,7 +41,7 @@
         <p>Under development.</p>
         -->
 
-        <nav class="navbar navbar-inverse">
+        <nav class="navbar navbar-default">
           <div class="container-fluid">
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header">
@@ -39,7 +51,8 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
               </button>
-              <a class="navbar-brand" href="http://www.wcu.edu"><img alt="Brand" src="images/wcu3.png" style="height:25px;"></a>
+              <a class="navbar-brand" href="http://www.wcu.edu"><img alt="WCU" src="images/wcu.png" style="height:45px;"></a>
+
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -53,7 +66,6 @@
             </div><!-- /.navbar-collapse -->
           </div><!-- /.container-fluid -->
         </nav>
-
 
 	<div class="jumbotron-main" style="text-align: left">
             <div class="container">
@@ -76,12 +88,16 @@
                             828-406-1743</li>
 
                             <li><abbr title="LinkedIn"><i style="content: url('images/ln.png');
-                            width: 15px; height: 15px;"></i></abbr> <a
-                            href="https://www.linkedin.com/in/mtking2">LinkedIn</a>
+                            width: 15px; height: 15px;"></i></abbr>  <a
+                            href="https://www.linkedin.com/in/mtking2" target="_blank">LinkedIn</a>
+                            </li>
+
+                            <li><abbr title="GitHub"><i class="fa fa-github fa-lg" aria-hidden="true">
+                                </i></abbr> <a href="https://github.com/mtking2" target="_blank">GitHub</a>
                             </li>
 
                             <li><abbr title="Email"><i class="glyphicon
-                            glyphicon-envelope"></i></abbr> <a
+                            glyphicon-envelope"></i></abbr>  <a
                             href="mailto:mtking2@catamount.wcu.edu">mtking2</a>
                             </li>
 
@@ -96,11 +112,11 @@
                     <div class="col-sm-2"></div>
                     <div class="col-sm-8">
                         <h1 class="page-header">Michael King</h1>
-                        <h3>WCU Undergratuate & Lab Assistant</h3>
-                        <h4><a href="http://www.wcu.edu/learn/departments-schools-colleges/Kimmel/academic-programs-degrees-offered/engtech/index.asp">
+                        <h3>Western Carolina University Gratuate</h3>
+                        <h4><a href="http://www.wcu.edu/learn/departments-schools-colleges/Kimmel/academic-programs-degrees-offered/engtech/index.asp" target="_blank">
                         B.S. in Electrical & Computer Engineering Technology</a></h4>
-                        <h4><a href="http://agora.cs.wcu.edu">B.S. in Computer Science</a></h4>
-                        <h4><a href="http://agora.cs.wcu.edu">Minor in Mathematics</a></h4>
+                        <h4><a href="http://agora.cs.wcu.edu target="_blank"">B.S. in Computer Science</a></h4>
+                        <h4><a href="http://agora.cs.wcu.edu target="_blank"">Minor in Mathematics</a></h4>
                     </div>
                     <div class="col-sm-2"></div>
                  </div><!-- end row-fluid -->
@@ -137,8 +153,9 @@
 
         <!-- Latest compiled and minified JavaScript -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-        <script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap-submenu.min.js" defer></script>
+        <script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap-submenu.min.js" defer></script>
+        <script src="https://use.fontawesome.com/3f9a2d6486.js"></script>
 
     </body>
 
