--- a/cv/index.html
+++ b/cv/index.html
@@ -8,10 +8,11 @@
         <!-- link rel='stylesheet' type='text/css' href='index.css'/-->
 
         <!-- Latest compiled and minified CSS -->
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
         <!-- Optional theme -->
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap-theme.min.css">
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap-submenu.min.css">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css">
+        <!-- Latest compiled and minified JavaScript -->
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-submenu.min.css">
         <style>
             abbr[title] {
                 border-bottom: none !important;
@@ -27,6 +28,13 @@
                 right: center;
 
             }
+            .navbar-brand,
+            .navbar-nav li a {
+                line-height: 50px;
+                height: 55px;
+                padding-top: 5px;
+                padding-left: 5px;
+            }
         </style>
     </head>
 
@@ -38,7 +46,7 @@
         <p>Under development.</p>
         -->
 
-        <nav class="navbar navbar-inverse">
+        <nav class="navbar navbar-default">
           <div class="container-fluid">
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header">
@@ -48,7 +56,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
               </button>
-              <a class="navbar-brand" href="http://www.wcu.edu"><img alt="Brand" src="../images/wcu3.png" style="height:25px;"></a>
+              <a class="navbar-brand" href="http://www.wcu.edu"><img alt="WCU" src="../images/wcu.png" style="height:45px;"></a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
