--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                     </div>
                     <br>
                     <div class="col-sm-2"></div>
-                    <div class="col-sm-3 well">
+                    <div class="col-sm-2 well">
                         <ul class="list-unstyled">
                             <li><abbr title="Address"><i class="glyphicon
                             glyphicon-map-marker"></i></abbr> 258 Belk Bldg.
@@ -115,8 +115,8 @@
                         <h3>Western Carolina University Gratuate</h3>
                         <h4><a href="http://www.wcu.edu/learn/departments-schools-colleges/Kimmel/academic-programs-degrees-offered/engtech/index.asp" target="_blank">
                         B.S. in Electrical & Computer Engineering Technology</a></h4>
-                        <h4><a href="http://agora.cs.wcu.edu target="_blank"">B.S. in Computer Science</a></h4>
-                        <h4><a href="http://agora.cs.wcu.edu target="_blank"">Minor in Mathematics</a></h4>
+                        <h4><a href="http://agora.cs.wcu.edu" target="_blank">B.S. in Computer Science</a></h4>
+                        <h4><a href="http://agora.cs.wcu.edu" target="_blank">Minor in Mathematics</a></h4>
                     </div>
                     <div class="col-sm-2"></div>
                  </div><!-- end row-fluid -->
@@ -126,7 +126,7 @@
                     <div class="col-sm-8">
                         <!-- <h4 class="page-header"></h4> -->
                         <hr>
-                        <a class="twitter-timeline" href="https://twitter.com/thaadjarvis" data-widget-id="641288357016936448">Tweets by @thaadjarvis</a>
+                        <a class="twitter-timeline" width="100%" href="https://twitter.com/thaadjarvis" data-widget-id="641288357016936448">Tweets by @thaadjarvis</a>
                         <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';
                         if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";
                         fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
