Added background picture to all pages. Changed navs, wells, and other elements to be transparent :)

--- a/cal/index.html
+++ b/cal/index.html
@@ -35,11 +35,15 @@
                 padding-top: 5px;
                 padding-left: 5px;
             }
+            .navbar {
+                background: rgba(245, 245, 245, 0.1);
+            }
         </style>
     </head>
 
 
-    <body>
+    <body style= "background: url(../images/Roan.jpg) no-repeat;
+    background-size: cover;">
         <!--
         <h1>Michael King</h1>
         <p>This is the default web page for this server.</p>
@@ -78,7 +82,7 @@
         </div>
 
 
-        <div style="position: relative; bottom: 0; width:100%; text-align: center">
+        <div style="position: relative; bottom: 0; width:100%; text-align: center; color:white; background: rgba(245, 245, 245, 0.2);">
             <hr>
             <p>
                 <a href="http://validator.w3.org/check/referer"
