--- a/coursework/index.html
+++ b/coursework/index.html
@@ -28,11 +28,15 @@
                 padding-top: 5px;
                 padding-left: 5px;
             }
+            .navbar {
+                background: rgba(245, 245, 245, 0.1);
+            }
         </style>
     </head>
 
 
-    <body>
+    <body style= "background: url(../images/Roan.jpg) no-repeat;
+    background-size: cover;">
         <!--
         <h1>Michael King</h1>
         <p>This is the default web page for this server.</p>
@@ -128,11 +132,15 @@
                     <div class="col-sm-2"></div>
                 </div><!-- end row-fluid -->
 
+                <div class="row" style="text-align: left">
+                   <div class="col-sm-2"></div>
+                   <div class="col-sm-8"><hr></div>
+                   <div class="col-sm-2"></div>
+                </div>
             </div><!-- /.container-fluid -->
         </div> <!-- end jumbotron -->
 
-	<div style="position: relative; bottom: 0; width:100%; text-align: center">
-            <hr>
+	<div style="position: relative; bottom: 0; width:100%; text-align: center; color:white">
             <p>
                 <a href="http://validator.w3.org/check/referer"
                 title="Validate HTML5"><img src="../images/valid-html51.png"
