--- a/cv/index.html
+++ b/cv/index.html
@@ -35,11 +35,15 @@
                 padding-top: 5px;
                 padding-left: 5px;
             }
+            .navbar {
+                background: rgba(245, 245, 245, 0.1);
+            }
         </style>
     </head>
 
 
-    <body>
+    <body style= "background: url(../images/Roan.jpg) no-repeat;
+    background-size: cover;">
         <!--
         <h1>Michael King</h1>
         <p>This is the default web page for this server.</p>
@@ -70,12 +74,18 @@
             </div><!-- /.navbar-collapse -->
           </div><!-- /.container-fluid -->
         </nav>
-
-        <div class="frame">
-            <iframe src="http://docs.google.com/gview?url=mtking2.github.io/docs/kingCV.pdf&embedded=true" style="width:95%; height:800px;"></iframe>
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-1"></div>
+                <div class="col-sm-10">
+                    <div class="frame">
+                        <iframe src="http://docs.google.com/gview?url=mtking2.github.io/docs/kingCV.pdf&embedded=true" style="width:100%; height:800px;"></iframe>
+                    </div>
+                </div>
+                <div class="col-sm-1"></div>
+            </div>
         </div>
-
-        <div style="position: relative; bottom: 0; width:100%; text-align: center">
+        <div style="position: relative; bottom: 0; width:100%; text-align: center; color:white; background: rgba(245, 245, 245, 0.1);">
             <hr>
             <p>
                 <a href="http://validator.w3.org/check/referer"
