Changed background photo to be static

--- a/index.html
+++ b/index.html
@@ -38,11 +38,17 @@
                 background: rgba(245, 245, 245, 0.2);
             }
 
+            body {
+              background: url(images/Roan.jpg) no-repeat center center fixed;
+              -webkit-background-size: cover;
+              -moz-background-size: cover;
+              -o-background-size: cover;
+              background-size: cover;
+            }
         </style>
     </head>
 
-    <body style= "background: url(images/Roan.jpg) no-repeat;
-    background-size: cover;">
+    <body>
         <!--
         <h1>Michael King</h1>
         <p>This is the default web page for this server.</p>
