--- a/coursework/index.html
+++ b/coursework/index.html
@@ -31,12 +31,18 @@
             .navbar {
                 background: rgba(245, 245, 245, 0.1);
             }
+            body {
+              background: url(../images/Roan.jpg) no-repeat center center fixed;
+              -webkit-background-size: cover;
+              -moz-background-size: cover;
+              -o-background-size: cover;
+              background-size: cover;
+            }
         </style>
     </head>
 
 
-    <body style= "background: url(../images/Roan.jpg) no-repeat;
-    background-size: cover;">
+    <body>
         <!--
         <h1>Michael King</h1>
         <p>This is the default web page for this server.</p>
