removed outline on navbar and wells

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <!-- Latest compiled and minified CSS -->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
         <!-- Optional theme -->
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css">
+        <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css"> -->
         <!-- Latest compiled and minified JavaScript -->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-submenu.min.css">
 
@@ -32,10 +32,12 @@
                 padding-left: 5px;
             }
             .navbar {
-                background: rgba(245, 245, 245, 0.1);
+                background: rgba(245, 245, 245, 0.2);
+                border: 0 !important;
             }
             .well, .well-sm {
                 background: rgba(245, 245, 245, 0.2);
+                border: 0 !important;
             }
 
             body {
@@ -81,82 +83,87 @@
           </div><!-- /.container-fluid -->
         </nav>
 
-	<div class="jumbotron-main" style="text-align: left">
-            <div class="container">
-                <div class="row">
-                    <div class="col-sm-2"></div>
-                    <div class="col-sm-3">
-                        <img src="images/bowtie2.jpg" class="img-rounded"
-                        style="height:300px; margin-left:0px" alt="MK Photo">
-                    </div>
-                    <br>
-                    <div class="col-sm-3"></div>
-                    <div class="col-sm-2">
-                        <div class="well well-sm">
-                        <ul class="list-unstyled">
-                            <li><abbr title="Address"><i class="glyphicon
-                            glyphicon-map-marker"></i></abbr> 258 Belk Bldg.
-                            <br></li>
 
-                            <li><abbr title="Phone"><i
-                            class="glyphicon glyphicon-earphone"></i></abbr>
-                            828-406-1743</li>
 
-                            <li><abbr title="LinkedIn"><i style="content: url('images/ln.png');
-                            width: 15px; height: 15px;"></i></abbr>  <a
-                            href="https://www.linkedin.com/in/mtking2" target="_blank">LinkedIn</a>
-                            </li>
+        <div class="jumbotron-main" style="text-align: left">
+                      <div class="container">
+                          <div class="row">
+                              <div class="col-sm-2"></div>
+                              <div class="col-sm-3">
+                                  <img src="images/bowtie2.jpg" class="img-rounded"
+                                  style="height:300px; margin-left:0px" alt="MK Photo">
+                              </div>
+                              <br>
+                              <div class="col-sm-3"></div>
+                              <div class="col-sm-2">
+                                  <div class="well well-sm">
+                                  <ul class="list-unstyled">
+                                      <li><abbr title="Address"><i class="glyphicon
+                                      glyphicon-map-marker"></i></abbr> 258 Belk Bldg.
+                                      <br></li>
 
-                            <li><abbr title="GitHub"><i class="fa fa-github fa-lg" aria-hidden="true">
-                                </i></abbr> <a href="https://github.com/mtking2" target="_blank">GitHub</a>
-                            </li>
+                                      <li><abbr title="Phone"><i
+                                      class="glyphicon glyphicon-earphone"></i></abbr>
+                                      828-406-1743</li>
 
-                            <li><abbr title="Email"><i class="glyphicon
-                            glyphicon-envelope"></i></abbr>  <a
-                            href="mailto:mtking2@catamount.wcu.edu">mtking2</a>
-                            </li>
+                                      <li><abbr title="LinkedIn"><i style="content: url('images/ln.png');
+                                      width: 15px; height: 15px;"></i></abbr>  <a
+                                      href="https://www.linkedin.com/in/mtking2" target="_blank">LinkedIn</a>
+                                      </li>
 
-                            <li><a href="http://tr-8r.com" target="_blank"><abbr title="Show your loyalty" ><i style="content: url('images/nst.png');
-                            width: 20px; padding-top: 10px;"></i></abbr></a>
-                            </li>
-                        </ul>
-                        </div>
-                    </div>
-                 </div><!-- end row-fluid -->
+                                      <li><abbr title="GitHub"><i class="fa fa-github fa-lg" aria-hidden="true">
+                                          </i></abbr> <a href="https://github.com/mtking2" target="_blank">GitHub</a>
+                                      </li>
 
-                 <div class="row" style="text-align: left">
-                    <div class="col-sm-2"></div>
-                    <div class="col-sm-8">
-                        <h1 class="page-header">Michael King</h1>
-                        <h3>Western Carolina University Gratuate</h3>
-                        <h4><a href="http://www.wcu.edu/learn/departments-schools-colleges/Kimmel/academic-programs-degrees-offered/engtech/index.asp" target="_blank">
-                        B.S. in Electrical & Computer Engineering Technology</a></h4>
-                        <h4><a href="http://agora.cs.wcu.edu" target="_blank">B.S. in Computer Science</a></h4>
-                        <h4><a href="http://agora.cs.wcu.edu" target="_blank">Minor in Mathematics</a></h4>
-                        <hr>
-                    </div>
-                    <div class="col-sm-2"></div>
-                 </div><!-- end row-fluid -->
+                                      <li><abbr title="Email"><i class="glyphicon
+                                      glyphicon-envelope"></i></abbr>  <a
+                                      href="mailto:mtking2@catamount.wcu.edu">mtking2</a>
+                                      </li>
 
-                 <div class="row">
-                    <div class="col-sm-2"></div>
-                    <div class="col-sm-8 well-sm">
-                        <!-- <h4 class="page-header"></h4> -->
-                        <a class="twitter-timeline" width="100%"  href="https://twitter.com/thaadjarvis" data-widget-id="641288357016936448" data-chrome=" nofooter transparent">Tweets by @thaadjarvis</a>
-                        <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';
-                        if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";
-                        fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
-                    </div>
-                    <div class="col-sm-2"></div>
-                </div><!-- end row-fluid -->
-                <div class="row" style="text-align: left">
-                   <div class="col-sm-2"></div>
-                   <div class="col-sm-8"><hr></div>
-                   <div class="col-sm-2"></div>
-                </div>
+                                      <li><a href="http://tr-8r.com" target="_blank"><abbr title="Show your loyalty" ><i style="content: url('images/nst.png');
+                                      width: 20px; padding-top: 10px;"></i></abbr></a>
+                                      </li>
+                                  </ul>
+                                  </div>
+                              </div>
+                           </div><!-- end row-fluid -->
 
-            </div><!-- /.container-fluid -->
-        </div> <!-- end jumbotron -->
+                           <div class="row" style="text-align: left">
+                              <div class="col-sm-2"></div>
+                              <div class="col-sm-8">
+                                  <h1 class="page-header">Michael King</h1>
+                                  <h3>Western Carolina University Gratuate</h3>
+                                  <h4><a href="http://www.wcu.edu/learn/departments-schools-colleges/Kimmel/academic-programs-degrees-offered/engtech/index.asp" target="_blank">
+                                  B.S. in Electrical & Computer Engineering Technology</a></h4>
+                                  <h4><a href="http://agora.cs.wcu.edu" target="_blank">B.S. in Computer Science</a></h4>
+                                  <h4><a href="http://agora.cs.wcu.edu" target="_blank">Minor in Mathematics</a></h4>
+                                  <hr>
+                              </div>
+                              <div class="col-sm-2"></div>
+                           </div><!-- end row-fluid -->
+
+                           <div class="row">
+                              <div class="col-sm-2"></div>
+                              <div class="col-sm-8 well-sm">
+                                  <!-- <h4 class="page-header"></h4> -->
+                                  <a class="twitter-timeline" width="100%"  href="https://twitter.com/thaadjarvis" data-widget-id="641288357016936448" data-chrome=" nofooter transparent">Tweets by @thaadjarvis</a>
+                                  <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';
+                                  if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";
+                                  fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+                              </div>
+                              <div class="col-sm-2"></div>
+                          </div><!-- end row-fluid -->
+                          <div class="row" style="text-align: left">
+                             <div class="col-sm-2"></div>
+                             <div class="col-sm-8"><hr></div>
+                             <div class="col-sm-2"></div>
+                          </div>
+
+                      </div><!-- /.container-fluid -->
+                  </div> <!-- end jumbotron -->
+
+
+
 
 
         <div style="position: relative; bottom: 0; width:100%; text-align: center; color:white;">
