--- a/index.html
+++ b/index.html
@@ -86,6 +86,16 @@
 
 
         <div class="jumbotron-main" style="text-align: left">
+          <div class="row">
+            <div class="col-sm-4"></div>
+            <div class="col-sm-4">
+              <div class="alert alert-info alert-dismissible" role="alert">
+                <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                <strong>Hey!</strong> Check out my ongoing <a href="../PyCube/" class="alert-link">PyCube</a> project :)
+              </div>
+            </div>
+            <div class="col-sm-2"></div>
+          </div>
                       <div class="container">
                           <div class="row">
                               <div class="col-sm-2"></div>
@@ -95,6 +105,7 @@
                               </div>
                               <br>
                               <div class="col-sm-3"></div>
+
                               <div class="col-sm-2">
                                   <div class="well well-sm">
                                   <ul class="list-unstyled">
