updated pycube alert

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
           <div class="row">
             <div class="col-sm-4"></div>
             <div class="col-sm-4">
-              <div class="alert alert-info alert-dismissible" role="alert">
+              <div class="alert alert-info alert-dismissible" role="alert" style="background: rgba(245, 245, 245, 0.5);border: 0 !important;">
                 <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
                 <strong>Hey!</strong> Check out my ongoing <a href="../PyCube/" class="alert-link">PyCube</a> project :)
               </div>
