Change coursework page title to 'Projects' and added LED Grad cap project.

--- a/coursework/index.html
+++ b/coursework/index.html
@@ -68,7 +68,7 @@
                 <li><a href="../">Home<span class="sr-only">(current)</span></a></li>
                 <li><a href="../cal/">Schedule<span class="sr-only">(current)</span></a></li>
                 <li><a href="../cv/">CV<span class="sr-only">(current)</span></a></li>
-                <li><a href="#">Projects & Course Work<span class="sr-only">(current)</span></a></li>
+                <li><a href="#">Projects<span class="sr-only">(current)</span></a></li>
               </ul>
             </div><!-- /.navbar-collapse -->
           </div><!-- /.container-fluid -->
@@ -81,7 +81,9 @@
                 <div class="row" style="text-align: left">
                     <div class="col-sm-2"></div>
                     <div class="col-sm-8">
-                        <h1 class="page-header">Projects & Course Work</h1>
+                        <h1 class="page-header">Projects</h1>
+
+                        <blockquote class="imgur-embed-pub" lang="en" data-id="a/ziBfg"><a href="//imgur.com/ziBfg">Graduation Cap of a Computer Science and Electrical Engineering Major</a></blockquote><script async src="//s.imgur.com/min/embed.js" charset="utf-8"></script>
 
                         <div class="panel panel-default">
                             <div class="panel-heading">
