--- a/cal/index.html
+++ b/cal/index.html
@@ -75,7 +75,7 @@
                 <li><a href="../">Home<span class="sr-only">(current)</span></a></li>
                 <li><a href="#">Schedule<span class="sr-only">(current)</span></a></li>
                 <li><a href="../cv/">CV<span class="sr-only">(current)</span></a></li>
-                <li><a href="../coursework/">Projects & Course Work<span class="sr-only">(current)</span></a></li>
+                <li><a href="../coursework/">Projects<span class="sr-only">(current)</span></a></li>
               </ul>
             </div><!-- /.navbar-collapse -->
 
