--- a/coursework/index.html
+++ b/coursework/index.html
@@ -83,10 +83,8 @@
                     <div class="col-sm-8">
                         <h1 class="page-header">Projects</h1>
 
-                        <div class="row">
-                            <div class="col-sm-2 col-md-offset-5">
-                                <blockquote class="imgur-embed-pub" lang="en" data-id="a/ziBfg"><a href="//imgur.com/ziBfg">Graduation Cap of a Computer Science and Electrical Engineering Major</a></blockquote><script async src="//s.imgur.com/min/embed.js" charset="utf-8"></script>
-                            </div>
+                        <div style="text-align: center">
+                            <blockquote class="imgur-embed-pub" lang="en" data-id="a/ziBfg"><a href="//imgur.com/ziBfg">Graduation Cap of a Computer Science and Electrical Engineering Major</a></blockquote><script async src="//s.imgur.com/min/embed.js" charset="utf-8"></script>
                         </div>
 
                         <div class="panel panel-default">
