--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
               <ul class="nav navbar-nav">
                 <li><a href="#">Home<span class="sr-only">(current)</span></a></li>
                 <li><a href="cal/">Schedule<span class="sr-only">(current)</span></a></li>
-                <li><a href="docs/kingCV.pdf">CV<span class="sr-only" target="_blank">(current)</span></a></li>
+                <li><a href="docs/kingCV.pdf" target="_blank">CV<span class="sr-only">(current)</span></a></li>
                 <li><a href="coursework/">Projects<span class="sr-only">(current)</span></a></li>
               </ul>
             </div><!-- /.navbar-collapse -->
