--- a/index.html
+++ b/index.html
@@ -86,92 +86,98 @@
 
 
         <div class="jumbotron-main" style="text-align: left">
-          <div class="row">
-            <div class="col-sm-4"></div>
-            <div class="col-sm-4">
-              <div class="alert alert-info alert-dismissible" role="alert" style="background: rgba(245, 245, 245, 0.5);border: 0 !important;">
-                <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                <strong>Hey!</strong> Check out my ongoing <a href="../PyCube/" class="alert-link">PyCube</a> project :)
+          <div class="container">
+              <div class="row" style="margin-right: 0px">
+                <div class="col-sm-2"></div>
+                <div class="col-sm-8">
+                  <div class="alert alert-info alert-dismissible" role="alert" style="background: rgba(245, 245, 245, 0.5);border: 0 !important;">
+                    <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                    <strong>Hey!</strong> Check out my ongoing <a href="../PyCube/" class="alert-link">PyCube</a> project :)
+                  </div>
+                </div>
+                <div class="col-sm-2"></div>
               </div>
-            </div>
-            <div class="col-sm-2"></div>
           </div>
-                      <div class="container">
-                          <div class="row">
-                              <div class="col-sm-2"></div>
-                              <div class="col-sm-3">
-                                  <img src="images/bowtie2.jpg" class="img-rounded"
-                                  style="height:300px; margin-left:0px" alt="MK Photo">
-                              </div>
-                              <br>
-                              <div class="col-sm-3"></div>
+          <div class="container" style="text-align: left">
+              <div class="row">
+                  <div class="col-sm-2"></div>
+                  <div class="col-sm-3">
+                      <img src="images/bowtie2.jpg" class="img-rounded"
+                      style="height:300px; margin-left:0px" alt="MK Photo">
+                  </div>
+                  <br>
+                  <div class="col-sm-2"></div>
 
-                              <div class="col-sm-2">
-                                  <div class="well well-sm">
-                                  <ul class="list-unstyled">
-                                      <li><abbr title="Address"><i class="glyphicon
-                                      glyphicon-map-marker"></i></abbr> 258 Belk Bldg.
-                                      <br></li>
+                  <div class="col-sm-3">
+                      <div class="well well-sm">
+                      <ul class="list-unstyled">
+                          <li><abbr title="Address"><i class="glyphicon
+                          glyphicon-map-marker"></i></abbr> 258 Belk Bldg.
+                          <br></li>
 
-                                      <li><abbr title="Phone"><i
-                                      class="glyphicon glyphicon-earphone"></i></abbr>
-                                      828-406-1743</li>
+                          <li><abbr title="Phone"><i
+                          class="glyphicon glyphicon-earphone"></i></abbr>
+                          828-406-1743</li>
 
-                                      <li><abbr title="LinkedIn"><i style="content: url('images/ln.png');
-                                      width: 15px; height: 15px;"></i></abbr>  <a
-                                      href="https://www.linkedin.com/in/mtking2" target="_blank">LinkedIn</a>
-                                      </li>
+                          <li><abbr title="LinkedIn"><i style="content: url('images/ln.png');
+                          width: 15px; height: 15px;"></i></abbr>  <a
+                          href="https://www.linkedin.com/in/mtking2" target="_blank">LinkedIn</a>
+                          </li>
 
-                                      <li><abbr title="GitHub"><i class="fa fa-github fa-lg" aria-hidden="true">
-                                          </i></abbr> <a href="https://github.com/mtking2" target="_blank">GitHub</a>
-                                      </li>
+                          <li><abbr title="GitHub"><i class="fa fa-github fa-lg" aria-hidden="true">
+                              </i></abbr> <a href="https://github.com/mtking2" target="_blank">GitHub</a>
+                          </li>
 
-                                      <li><abbr title="Email"><i class="glyphicon
-                                      glyphicon-envelope"></i></abbr>  <a
-                                      href="mailto:mtking2@catamount.wcu.edu">mtking2</a>
-                                      </li>
+                          <li><abbr title="GitHub"><i class="fa fa-steam-square fa-lg" aria-hidden="true">
+                          </i></abbr> <a href="http://steamcommunity.com/id/mtking2/" target="_blank"> Steam</a>
+                          </li>
 
-                                      <li><a href="http://tr-8r.com" target="_blank"><abbr title="Show your loyalty" ><i style="content: url('images/nst.png');
-                                      width: 20px; padding-top: 10px;"></i></abbr></a>
-                                      </li>
-                                  </ul>
-                                  </div>
-                              </div>
-                           </div><!-- end row-fluid -->
+                          <li><abbr title="Email"><i class="glyphicon
+                          glyphicon-envelope"></i></abbr>  <a
+                          href="mailto:mtking1123@gmail.com"> mtking1123@gmail.com</a>
+                          </li>
 
-                           <div class="row" style="text-align: left">
-                              <div class="col-sm-2"></div>
-                              <div class="col-sm-8">
-                                  <h1 class="page-header">Michael King</h1>
-                                  <h3>Western Carolina University Gratuate</h3>
-                                  <h4><a href="http://www.wcu.edu/learn/departments-schools-colleges/Kimmel/academic-programs-degrees-offered/engtech/index.asp" target="_blank">
-                                  B.S. in Electrical & Computer Engineering Technology</a></h4>
-                                  <h4><a href="http://agora.cs.wcu.edu" target="_blank">B.S. in Computer Science</a></h4>
-                                  <h4><a href="http://agora.cs.wcu.edu" target="_blank">Minor in Mathematics</a></h4>
-                                  <hr>
-                              </div>
-                              <div class="col-sm-2"></div>
-                           </div><!-- end row-fluid -->
+                          <li><a href="http://tr-8r.com" target="_blank"><abbr title="Show your loyalty" ><i style="content: url('images/nst.png');
+                          width: 20px; padding-top: 10px;"></i></abbr></a>
+                          </li>
+                      </ul>
+                      </div>
+                  </div>
+               </div><!-- end row-fluid -->
 
-                           <div class="row">
-                              <div class="col-sm-2"></div>
-                              <div class="col-sm-8 well-sm">
-                                  <!-- <h4 class="page-header"></h4> -->
-                                  <a class="twitter-timeline" width="100%"  href="https://twitter.com/thaadjarvis" data-widget-id="641288357016936448" data-chrome=" nofooter transparent">Tweets by @thaadjarvis</a>
-                                  <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';
-                                  if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";
-                                  fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
-                              </div>
-                              <div class="col-sm-2"></div>
-                          </div><!-- end row-fluid -->
-                          <div class="row" style="text-align: left">
-                             <div class="col-sm-2"></div>
-                             <div class="col-sm-8"><hr></div>
-                             <div class="col-sm-2"></div>
-                          </div>
+               <div class="row" style="text-align: left">
+                  <div class="col-sm-2"></div>
+                  <div class="col-sm-8">
+                      <h1 class="page-header">Michael King</h1>
+                      <h3>Western Carolina University Gratuate</h3>
+                      <h4><a href="http://www.wcu.edu/learn/departments-schools-colleges/Kimmel/academic-programs-degrees-offered/engtech/index.asp" target="_blank">
+                      B.S. in Electrical & Computer Engineering Technology</a></h4>
+                      <h4><a href="http://agora.cs.wcu.edu" target="_blank">B.S. in Computer Science</a></h4>
+                      <h4><a href="http://agora.cs.wcu.edu" target="_blank">Minor in Mathematics</a></h4>
+                      <hr>
+                  </div>
+                  <div class="col-sm-2"></div>
+               </div><!-- end row-fluid -->
 
-                      </div><!-- /.container-fluid -->
-                  </div> <!-- end jumbotron -->
+               <div class="row">
+                  <div class="col-sm-2"></div>
+                  <div class="col-sm-8 well-sm">
+                      <!-- <h4 class="page-header"></h4> -->
+                      <a class="twitter-timeline" width="100%"  href="https://twitter.com/thaadjarvis" data-widget-id="641288357016936448" data-chrome=" nofooter transparent">Tweets by @thaadjarvis</a>
+                      <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';
+                      if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";
+                      fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+                  </div>
+                  <div class="col-sm-2"></div>
+              </div><!-- end row-fluid -->
+              <div class="row" style="text-align: left">
+                 <div class="col-sm-2"></div>
+                 <div class="col-sm-8"><hr></div>
+                 <div class="col-sm-2"></div>
+              </div>
+
+          </div><!-- /.container-fluid -->
+      </div> <!-- end jumbotron -->
 
 
 
